* Added test case for SSL verification of peer failing  * ''Really'' making this the 0.1.0 release this time :)
git-svn-id: http://proj.badc.rl.ac.uk/svn/ndg-security/trunk/ndg_httpsclient@7993 051b1e3e-aa0c-0410-b6c2-bfbade6052be

--- a/ndg/httpsclient/test/README
+++ b/ndg/httpsclient/test/README
@@ -5,8 +5,22 @@ The unit tests expect to connect to a simple HTTPS server listening on port
 
 $ ./scripts/openssl_https_server.sh
 
+Unit tests
+----------
+Run for example,
+
+$ python ./test_urllib2.py
+
 Troubleshooting
 ---------------
-Run it from *this* directory.  Also ensure it is has execute bits set. e.g.
+ * Run the openssl script from *this* directory.  
+ * Also ensure it is has execute bits set. e.g.
 
-$ chmod 755 ./scripts/openssl_https_server.sh
+ $ chmod 755 ./scripts/openssl_https_server.sh
+ 
+ * You may need to set the no_proxy environment variable if you have a HTTPS
+ proxy in place:
+ 
+ $ export no_proxy=localhost
+
+
